# imfile

./: Cargo.toml  README.md
examples/: basic.rs
src/: file_dialog.rs  lib.rs
